opam-version: "2.0"
synopsis: "Run-time patterns that explain match failures"
description: "ppx_pattern is a PPX extension that generates functions from patterns that explain match failures by returning the common context and the list of differences between a pattern and a value"
maintainer: "Thierry Martinez <Thierry.Martinez@inria.fr>"
authors: "Thierry Martinez <Thierry.Martinez@inria.fr>"
homepage: "https://gitlab.inria.fr/tmartine/pattern"
bug-reports: "https://gitlab.inria.fr/tmartine/pattern/issues"
license: "BSD"
dev-repo: "git+https://gitlab.inria.fr/tmartine/pattern.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]]
depends: [
  "stdcompat"
  "dune" {>= "1.2"}
  "ocaml" {>= "4.02.0" & < "4.08.0"}]
