(library
  (name pattern)
  (public_name pattern.ppx)
;  (preprocess (staged_pps ppx_import ppxlib.metaquot ppx_deriving.std))
  (preprocess (pps ppx_deriving.std ppxlib.metaquot))
  (library_flags (-linkall))
  (flags -open Stdcompat)
  (libraries compiler-libs ocaml-migrate-parsetree stdcompat
    ppxlib.metaquot))
